@@ -40,6 +40,7 @@ Bugfixes:
  - GB MBC: Fix MBC2 saves (fixes mgba.io/i/954)
  - GBA Memory: Fix copy-on-write memory leak
  - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
+ - GBA I/O: Fix writing to DISPCNT CGB flag (fixes mgba.io/i/902)
 Misc:
  - GBA Timer: Use global cycles for timers
  - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
